# python-excercise-repository

./: .gitignore  A-note  Note-flink-hudi.txt  Note-miscellenous.txt  README.md
.note/: note.txt  python.analysis.extraPaths.txt
a_01_oo_excercise/: p_01_an_empty_class.py  p_01_empty_class.py  p_02_constructor_instance_method.py  p_02_constructor_instance_methods.py  p_03_class_attributes.py  p_04_instance_class_static_methods.py
async_example/: main.py  note-difference-with-javascript.txt  note.txt
b_01_apache-spark-excercise/: a_00_test_pad.py  a_01_check_path.py  a_02_word-count.py  a_03_flatamp_parallel.py  a_04_dataframe_basic.py
c-01-boto/: read-s3.py
c-01-python-pdf-generation/: generate-pdf.py  note-pdfgrep-pdfpk  pdf.py
c-02-python-pdf-fargate/: package.json
c-02-python-word-pdf/: A-note  Dockerfile  cdk.js  cdk.json  package-lock.json  package.json  reqirement.txt  util.py  word-pdf.py
c-02-python-word-pdf-keep/: util.py
c-03-python-docx/: test.py
d-01-prime-calculation/: calculate.py  integration.py  iter-loop.py  primes.py  solve-lq.py
datetime_example/: strftime-example.py
e-01-lp-example/: example_1.py  note
fastapi_example/: note.txt  requirement.txt
flask_silero_example/: requirements.txt
oauth2_browser_launch/: main.py  note.txt
pypi_example/1_NeuralNine_example/fast_factorial_repetition/: pyproject.toml
pypi_example/1_NeuralNine_example/fast_factorial_repetition/implementation/: fast_factorial_repetition.c
pypi_example/1_NeuralNine_example/fast_factorial_repetition/src/fast_factorial_repetition/: __init__.pyi
(+454 files in other folders)
