[build-system]
requires = ["setuptools>=83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-factorial-repetition"
version = "0.0.1"
requires-python = ">=3.12"

[[tool.setuptools.ext-modules]]
language = "c"
name = "fast_factorial_repetition"
sources = ["implementation/fast_factorial_repetition.c"]
extra-compile-args = []
